# bunny

./: Cargo.toml  default.nix  result
.cargo/: config.toml
src/: default_commands.rs  lib.rs  macros.rs  main.rs  table.rs  utils.rs
