[package]
name = "bunny"
version = "0.1.0"
edition = "2021"

[dependencies]
linkme = "0.3.31"
once_cell = "1.20.3"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "sync", "io-std", "io-util", "macros"] }
warp = "0.3.7"
paste = "1.0"
